<resources>
    <string name="app_name">loginagada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="cancel">cancel</string>
    <string name="logo">LOGO</string>
</resources>